tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0227/input.js
function hello() { "use strict"; var private; }
